[project]
name = "responder"
version = "3.1.7.0"
package-mode = true
description = "Responder is a LLMNR, NBT-NS and MDNS poisoner, with built-in HTTP/SMB/MSSQL/FTP/LDAP rogue authentication server supporting NTLMv1/NTLMv2/LMv2, Extended Security NTLMSSP and Basic HTTP authentication."
authors = [
    {name = "Laurent Gaffie", email = "laurent.gaffie@gmail.com "}
]
keywords = ["LLMNR", "Poisoning", "Windows", "SMB", "Relay", "NBT-NS", "NTLM"]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aioquic (>=1.2.0,<2.0.0)",
    "netifaces (>=0.11.0,<0.12.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[project.scripts]
responder = "responder.cli:main"
responder-dump = "responder.tools.dump_hashes:main"
responder-report = "responder.tools.report:main"


[project.urls]
repository  = "https://github.com/lgandx/Responder"
sponsor = "https://www.paypal.me/PythonResponder"
issues = "https://github.com/lgandx/Responder/issues"
changelog = "https://github.com/lgandx/Responder/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
